--- a/symfony_fw/src/Config.php.dist
+++ b/symfony_fw/src/Config.php.dist
@@ -49,11 +49,11 @@ class Config {
     public function __construct() {
         $this->databaseConnectionFields = Array("", "", "", Array());
         $this->protocol = isset($_SERVER['HTTPS']) == true ? "https://" : "http://";
-        $this->pathRoot = "/projects/uebusaito/symfony_fw";
-        $this->urlRoot = "/projects/uebusaito/symfony_fw/public";
+        $this->pathRoot = "/path_root";
+        $this->urlRoot = "/path_public";
         $this->supportSymlink = true;
         $this->file = "/index.php";
-        $this->name = "Uebusaito 1.0.0";
+        $this->name = "Website name";
         $this->curlLogin = Array("", "", "");
     }
     
