--- a/symfony_fw/config/packages/framework.yaml
+++ b/symfony_fw/config/packages/framework.yaml
@@ -13,7 +13,7 @@ framework:
         handler_id: session.handler.native_file
         #save_path: '%kernel.project_dir%/var/sessions/%kernel.environment%'
         save_path: '/var/lib/php/sessions'
-        name: uebusaito
+        name: uebusaito_dev
         cookie_domain: .machine.local
         cookie_lifetime: 0
 
