Textarea for multiple ip in api added.

--- a/symfony_fw/config/validator/validation.yaml
+++ b/symfony_fw/config/validator/validation.yaml
@@ -801,7 +801,7 @@ App\Entity\ApiBasic:
             - Regex:
                 groups: [apiBasic_create, apiBasic_profile]
                 htmlPattern: false
-                pattern: /^[.\/,0-9]+$/
+                pattern: /^[.\/,0-9\r\n|\r|\n]+$/
         active:
             - NotBlank:
                 groups: [apiBasic_create, apiBasic_profile]
