--- a/symfony_fw/config/validator/validation.yaml
+++ b/symfony_fw/config/validator/validation.yaml
@@ -238,9 +238,9 @@ App\Entity\User:
     properties:
         roleUserId:
             - NotBlank:
-                groups: [user_create, user_profile]
+                groups: [registration, profile, user_create, user_profile]
             - Regex:
-                groups: [user_create, user_profile]
+                groups: [registration, profile, user_create, user_profile]
                 htmlPattern: false
                 pattern: /^[,0-9]+$/
         username:
@@ -253,12 +253,12 @@ App\Entity\User:
                 message: entity.user.username
         name:
             - Regex:
-                groups: [user_create, user_profile]
+                groups: [registration, profile, user_create, user_profile]
                 htmlPattern: false
                 pattern: /^[(a-zA-Z )|(\p{L}\p{N})]+$/
         surname:
             - Regex:
-                groups: [user_create, user_profile]
+                groups: [registration, profile, user_create, user_profile]
                 htmlPattern: false
                 pattern: /^[(a-zA-Z ')|(\p{L}\p{N})]+$/
         email:
@@ -270,7 +270,7 @@ App\Entity\User:
                 pattern: /^[a-z0-9]+[_a-z0-9\.-]*[a-z0-9]+@[a-z-0-9]+(\.[a-z-0-9]+)*(\.[a-z]{2,5})$/
         telephone:
             - Regex:
-                groups: [user_create, user_profile]
+                groups: [registration, profile, user_create, user_profile]
                 htmlPattern: false
                 pattern: /^[0-9]+$/
         born:
@@ -280,62 +280,62 @@ App\Entity\User:
                 pattern: /^[0-9]{4}-[0-9]{1,2}-[0-9]{1,2}|[0-9]{1,2}-[0-9]{1,2}-[0-9]{4}|[0-9]{4}\/[0-9]{1,2}\/[0-9]{1,2}|[0-9]{1,2}\/[0-9]{1,2}\/[0-9]{4}$/
         gender:
             - Regex:
-                groups: [user_create, user_profile]
+                groups: [registration, profile, user_create, user_profile]
                 htmlPattern: false
                 pattern: /^[a-z]$/
         fiscalCode:
             - Regex:
-                groups: [user_create, user_profile]
+                groups: [registration, profile, user_create, user_profile]
                 htmlPattern: false
                 pattern: /^[a-zA-Z0-9]$/
         companyName:
             - Regex:
-                groups: [user_create, user_profile]
+                groups: [registration, profile, user_create, user_profile]
                 htmlPattern: false
                 pattern: /^[(a-zA-Z 0-9)|(\p{L}\p{N})]+$/
         vat:
             - Regex:
-                groups: [user_create, user_profile]
+                groups: [registration, profile, user_create, user_profile]
                 htmlPattern: false
                 pattern: /^[0-9]+$/
         website:
             - Regex:
-                groups: [user_create, user_profile]
+                groups: [registration, profile, user_create, user_profile]
                 htmlPattern: false
                 pattern: /^(https?:\/\/)(www).([a-zA-Z._0-9\/]+).([a-z]+)$/
         state:
             - Regex:
-                groups: [user_create, user_profile]
+                groups: [registration, profile, user_create, user_profile]
                 htmlPattern: false
                 pattern: /^[(a-zA-Z )|(\p{L}\p{N})]+$/
         city:
             - Regex:
-                groups: [user_create, user_profile]
+                groups: [registration, profile, user_create, user_profile]
                 htmlPattern: false
                 pattern: /^[(a-zA-Z )|(\p{L}\p{N})]+$/
         zip:
             - Regex:
-                groups: [user_create, user_profile]
+                groups: [registration, profile, user_create, user_profile]
                 htmlPattern: false
                 pattern: /^[0-9]+$/
         address:
             - Regex:
-                groups: [user_create, user_profile]
+                groups: [registration, profile, user_create, user_profile]
                 htmlPattern: false
                 pattern: /^[(a-zA-Z 0-9)|(\p{L}\p{N})]+$/
         password:
             - NotBlank:
-                groups: [registration, user_create]
+                groups: [registration, profile_password, user_create]
             - Regex:
-                groups: [registration, user_create]
+                groups: [registration, profile_password, user_create, user_profile]
                 htmlPattern: false
                 pattern: /^.{8,30}$/
                 message: entity.user.password
         passwordConfirm:
             - NotBlank:
-                groups: [registration, user_create]
+                groups: [registration, profile_password, user_create]
             - Regex:
-                groups: [registration, user_create]
+                groups: [registration, profile_password, user_create, user_profile]
                 htmlPattern: false
                 pattern: /^.{8,30}$/
                 message: entity.user.password
