Minor bug fixed and security improved.

--- a/symfony_fw/config/validator/validation.yaml
+++ b/symfony_fw/config/validator/validation.yaml
@@ -607,7 +607,7 @@ App\Entity\SettingLinePush:
                 groups: [setting_line_push]
                 htmlPattern: false
                 pattern: /^[a-zA-Z _0-9]+$/
-        userId:
+        userIdPrimary:
             - NotBlank:
                 groups: [setting_line_push]
             - Regex:
